+ Replace deprecated functions